# WeddingAI

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  TODO.md  WeddingAI-Prototype.html
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
backend/migrations/: 0001_jobs.sql
backend/scripts/: init-test-db.sql
backend/src/: db.rs  main.rs  poller.rs  routes.rs  state.rs  worker_client.rs
docs/: hackathon-spec.md  phase0-notes.md  phase0-runbook.md
docs/lichtfeld/: INDEX.md
docs/lichtfeld/features/: gut.md
docs/lichtfeld/wiki/: Build-Instructions-Docker.md  Build-Instructions-Linux.md  Build-Instructions-Windows.md  Command-Line-Options.md  Development.md  Example-Dataset.md  Feature-Documentation.md  Frequently-Asked-Questions.md  Home.md  Shortcuts.md
docs/submission/: business-potential.txt  demo-links.txt  demo-video-script.md  gemini-usage.txt  pitch-video-script.md  pitch.txt  problem.txt  screenshot-shotlist.md  team.txt  tech-stack.txt
frontend/: .env.example  .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/jobs/: page.tsx
frontend/app/jobs/[id]/: page.tsx
frontend/app/studio/: page.tsx
frontend/components/: AppShell.tsx  FrameGallery.tsx
frontend/lib/: api.ts  frames.ts  memory.ts  samples.ts  theme.ts  themes.ts  useJobPolling.ts
frontend/public/demo/: scene.html
frontend/scripts/: build-samples.mjs
scripts/: seed-demo-jobs.sh  video-to-frames.sh
worker/: Dockerfile  handler.py
(+2 files in other folders)
