[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "sqlite", "migrate"] }
tokio = { version = "1.53.0", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.24.0", features = ["v4"] }
